# sukovanej.github.io

./: Makefile  index.html  readme.md
blog/: index.md
blog-generator/: Makefile  generate.py  pyproject.toml  pyrightconfig.json
blog-generator/default_template/: comments_template.html  header_template.html  main_template.html  tag_template.html
blog-generator/default_template/static/: style.css
blog-generator/src/: cli.py  generate.py  parser.py
blog/posts/: 2022-08-07.html  2022-08-07.md  2022-08-08.md  2022-08-09.md  2022-08-10.md  2022-08-11.md  template.md
docs/: index.html
docs/bezier/: index.html
docs/bezier/assets/: index-287f8c57.css  index-5be47a08.js  index-845fa20d.css
docs/blog/: index.html
docs/blog/posts/: 2022-08-07.html  2022-08-08.html  2022-08-09.html  2022-08-10.html
docs/pw/: asset-manifest.json  index.html
docs/static/: style.css
pw/: asset-manifest.json  index.html
pw/static/css/: main.3b26c621.chunk.css  main.3b26c621.chunk.css.map  main.4f1adc50.chunk.css  main.4f1adc50.chunk.css.map  main.71f1cea8.chunk.css  main.71f1cea8.chunk.css.map  main.7202b568.chunk.css  main.7202b568.chunk.css.map  main.947b2499.chunk.css  main.947b2499.chunk.css.map  main.d28b38be.chunk.css  main.d28b38be.chunk.css.map  main.dde4e9bf.chunk.css  main.dde4e9bf.chunk.css.map
pw/static/js/: 2.43bb5c94.chunk.js  2.43bb5c94.chunk.js.map  2.53f2283d.chunk.js  2.53f2283d.chunk.js.map  2.8fe4aae2.chunk.js  2.8fe4aae2.chunk.js.LICENSE.txt  2.d6c73913.chunk.js  2.d6c73913.chunk.js.map  2.ddcf5284.chunk.js  2.ddcf5284.chunk.js.map  3.28c3173d.chunk.js  3.28c3173d.chunk.js.map  3.3f633617.chunk.js  3.7d2945ce.chunk.js  3.7d2945ce.chunk.js.map  3.b2f7ceae.chunk.js  3.b2f7ceae.chunk.js.map  3.f17ae0f3.chunk.js  3.f17ae0f3.chunk.js.map  main.04bc14e0.chunk.js  main.04bc14e0.chunk.js.map  main.0912b30c.chunk.js  main.0912b30c.chunk.js.map  main.12950d08.chunk.js  (+30 more)
static/: highlight.min.js
(+51 files in other folders)
